--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "better-curry",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Forget Function.bind and func.apply(context, arguments), performance matters! For a better curry!",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
     "coverage": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
     "benchmark": "node test/benchmark.js"
+  },
+  "engines": {
+    "node": ">=0.10"
   },
   "repository": {
     "type": "git",
