--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "better-curry",
   "main": "index.js",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "authors": [
     "Paulo Cesar <email@pocesar.e4ward.com>"
   ],
@@ -18,6 +18,7 @@
     "**/.*",
     "node_modules",
     "bower_components",
+    "coverage",
     "test",
     "tests"
   ]
