--- a/package.json
+++ b/package.json
@@ -24,6 +24,15 @@
     "functional",
     "delegate"
   ],
+  "testling": {
+    "harness": "mocha-bdd",
+    "files": "test/tests.js",
+    "browsers": [
+      "ie/8..latest",
+      "chrome/latest",
+      "firefox/latest"
+    ]
+  },
   "devDependencies": {
     "mocha": "*",
     "expect.js": "*",
